--- a/Cipher.vcxproj
+++ b/Cipher.vcxproj
@@ -94,9 +94,10 @@
     <ClCompile Include="HealthComponent.cpp" />
     <ClCompile Include="image.cpp" />
     <ClCompile Include="input.cpp" />
+    <ClCompile Include="map.cpp" />
     <ClCompile Include="MoveComponent.cpp" />
-    <ClCompile Include="planet.cpp" />
     <ClCompile Include="Cipher.cpp" />
+    <ClCompile Include="platform.cpp" />
     <ClCompile Include="textureManager.cpp" />
     <ClCompile Include="winmain.cpp" />
   </ItemGroup>
@@ -109,9 +110,10 @@
     <ClInclude Include="HealthComponent.h" />
     <ClInclude Include="image.h" />
     <ClInclude Include="input.h" />
+    <ClInclude Include="map.h" />
     <ClInclude Include="MoveComponent.h" />
-    <ClInclude Include="planet.h" />
     <ClInclude Include="Cipher.h" />
+    <ClInclude Include="platform.h" />
     <ClInclude Include="textureManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
