--- a/Cipher.vcxproj
+++ b/Cipher.vcxproj
@@ -88,30 +88,77 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Agent47.cpp" />
+    <ClCompile Include="Agent47EComponent.cpp" />
+    <ClCompile Include="Agent47QComponent.cpp" />
+    <ClCompile Include="Agent47RComponent.cpp" />
+    <ClCompile Include="Agent47WComponent.cpp" />
+    <ClCompile Include="characters.cpp" />
+    <ClCompile Include="Cyrax.cpp" />
+    <ClCompile Include="CyraxEComponent.cpp" />
+    <ClCompile Include="CyraxQComponent.cpp" />
+    <ClCompile Include="CyraxRComponent.cpp" />
+    <ClCompile Include="CyraxWComponent.cpp" />
     <ClCompile Include="entity.cpp" />
+    <ClCompile Include="Freid.cpp" />
+    <ClCompile Include="FreidEComponent.cpp" />
+    <ClCompile Include="FreidQComponent.cpp" />
+    <ClCompile Include="FreidRComponent.cpp" />
+    <ClCompile Include="FreidWComponent.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="graphics.cpp" />
     <ClCompile Include="HealthComponent.cpp" />
     <ClCompile Include="image.cpp" />
     <ClCompile Include="input.cpp" />
+    <ClCompile Include="ItemPortal.cpp" />
     <ClCompile Include="MoveComponent.cpp" />
-    <ClCompile Include="planet.cpp" />
     <ClCompile Include="Cipher.cpp" />
+    <ClCompile Include="Necrid.cpp" />
+    <ClCompile Include="NecridEComponent.cpp" />
+    <ClCompile Include="NecridQComponent.cpp" />
+    <ClCompile Include="NecridRComponent.cpp" />
+    <ClCompile Include="NecridWComponent.cpp" />
+    <ClCompile Include="projectile.cpp" />
+    <ClCompile Include="Skill.cpp" />
     <ClCompile Include="textureManager.cpp" />
     <ClCompile Include="winmain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Agent47.h" />
+    <ClInclude Include="Agent47EComponent.h" />
+    <ClInclude Include="Agent47QComponent.h" />
+    <ClInclude Include="Agent47RComponent.h" />
+    <ClInclude Include="Agent47WComponent.h" />
+    <ClInclude Include="characters.h" />
+    <ClInclude Include="characterFSM.h" />
     <ClInclude Include="constants.h" />
+    <ClInclude Include="Cyrax.h" />
+    <ClInclude Include="CyraxEComponent.h" />
+    <ClInclude Include="CyraxQComponent.h" />
+    <ClInclude Include="CyraxRComponent.h" />
+    <ClInclude Include="CyraxWComponent.h" />
     <ClInclude Include="entity.h" />
+    <ClInclude Include="Freid.h" />
+    <ClInclude Include="FreidEComponent.h" />
+    <ClInclude Include="FreidQComponent.h" />
+    <ClInclude Include="FreidRComponent.h" />
+    <ClInclude Include="FreidWComponent.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="gameError.h" />
     <ClInclude Include="graphics.h" />
     <ClInclude Include="HealthComponent.h" />
     <ClInclude Include="image.h" />
     <ClInclude Include="input.h" />
+    <ClInclude Include="ItemPortal.h" />
     <ClInclude Include="MoveComponent.h" />
-    <ClInclude Include="planet.h" />
     <ClInclude Include="Cipher.h" />
+    <ClInclude Include="Necrid.h" />
+    <ClInclude Include="NecridEComponent.h" />
+    <ClInclude Include="NecridQComponent.h" />
+    <ClInclude Include="NecridRComponent.h" />
+    <ClInclude Include="NecridWComponent.h" />
+    <ClInclude Include="projectile.h" />
+    <ClInclude Include="Skill.h" />
     <ClInclude Include="textureManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
