--- a/Cipher.vcxproj
+++ b/Cipher.vcxproj
@@ -110,10 +110,12 @@
     <ClCompile Include="game.cpp" />
     <ClCompile Include="graphics.cpp" />
     <ClCompile Include="HealthComponent.cpp" />
+    <ClCompile Include="heart.cpp" />
     <ClCompile Include="image.cpp" />
     <ClCompile Include="input.cpp" />
     <ClCompile Include="ItemPortal.cpp" />
     <ClCompile Include="map.cpp" />
+    <ClCompile Include="menuBtn.cpp" />
     <ClCompile Include="MoveComponent.cpp" />
     <ClCompile Include="Cipher.cpp" />
     <ClCompile Include="Necrid.cpp" />
@@ -124,6 +126,8 @@
     <ClCompile Include="projectile.cpp" />
     <ClCompile Include="Skill.cpp" />
     <ClCompile Include="platform.cpp" />
+    <ClCompile Include="startMenu.cpp" />
+    <ClCompile Include="TextDX.cpp" />
     <ClCompile Include="textureManager.cpp" />
     <ClCompile Include="winmain.cpp" />
   </ItemGroup>
@@ -153,6 +157,7 @@
     <ClInclude Include="gameError.h" />
     <ClInclude Include="graphics.h" />
     <ClInclude Include="HealthComponent.h" />
+    <ClInclude Include="heart.h" />
     <ClInclude Include="image.h" />
     <ClInclude Include="input.h" />
     <ClInclude Include="ItemPortal.h" />
@@ -167,6 +172,9 @@
     <ClInclude Include="projectile.h" />
     <ClInclude Include="Skill.h" />
     <ClInclude Include="platform.h" />
+    <ClInclude Include="startMenu.h" />
+    <ClInclude Include="menuBtn.h" />
+    <ClInclude Include="TextDX.h" />
     <ClInclude Include="textureManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
