added getRange() to all skill components
as requested by yifan

--- a/Cipher.vcxproj
+++ b/Cipher.vcxproj
@@ -123,7 +123,7 @@
     <ClCompile Include="NecridRComponent.cpp" />
     <ClCompile Include="NecridWComponent.cpp" />
     <ClCompile Include="projectile.cpp" />
-    <ClCompile Include="Skill.cpp" />
+    <ClCompile Include="structure.cpp" />
     <ClCompile Include="platform.cpp" />
     <ClCompile Include="textureManager.cpp" />
     <ClCompile Include="winmain.cpp" />
@@ -167,7 +167,7 @@
     <ClInclude Include="NecridRComponent.h" />
     <ClInclude Include="NecridWComponent.h" />
     <ClInclude Include="projectile.h" />
-    <ClInclude Include="Skill.h" />
+    <ClInclude Include="structure.h" />
     <ClInclude Include="platform.h" />
     <ClInclude Include="textureManager.h" />
   </ItemGroup>
