--- a/Cipher.vcxproj
+++ b/Cipher.vcxproj
@@ -113,6 +113,7 @@
     <ClCompile Include="HealthComponent.cpp" />
     <ClCompile Include="image.cpp" />
     <ClCompile Include="input.cpp" />
+    <ClCompile Include="instruction.cpp" />
     <ClCompile Include="ItemPortal.cpp" />
     <ClCompile Include="map.cpp" />
     <ClCompile Include="MoveComponent.cpp" />
@@ -157,6 +158,7 @@
     <ClInclude Include="HealthComponent.h" />
     <ClInclude Include="image.h" />
     <ClInclude Include="input.h" />
+    <ClInclude Include="instruction.h" />
     <ClInclude Include="ItemPortal.h" />
     <ClInclude Include="map.h" />
     <ClInclude Include="MoveComponent.h" />
