--- a/Cipher.vcxproj.filters
+++ b/Cipher.vcxproj.filters
@@ -41,6 +41,14 @@
     <ClCompile Include="textureManager.cpp" />
     <ClCompile Include="winmain.cpp" />
     <ClCompile Include="instruction.cpp" />
+    <ClCompile Include="WinBackground.cpp" />
+    <ClCompile Include="first.cpp" />
+    <ClCompile Include="second.cpp" />
+    <ClCompile Include="third.cpp" />
+    <ClCompile Include="fourth.cpp" />
+    <ClCompile Include="playerone.cpp" />
+    <ClCompile Include="playertwo.cpp" />
+    <ClCompile Include="ai.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Agent47.h" />
@@ -85,5 +93,13 @@
     <ClInclude Include="platform.h" />
     <ClInclude Include="textureManager.h" />
     <ClInclude Include="instruction.h" />
+    <ClInclude Include="WinBackground.h" />
+    <ClInclude Include="first.h" />
+    <ClInclude Include="second.h" />
+    <ClInclude Include="third.h" />
+    <ClInclude Include="fourth.h" />
+    <ClInclude Include="playerone.h" />
+    <ClInclude Include="playertwo.h" />
+    <ClInclude Include="ai.h" />
   </ItemGroup>
 </Project>
